<resources>
    <!-- Strings globales de la aplicación -->
    <string name="app_name">Gameopardy</string>

    <!-- Strings de la actividad: Menú principal -->
    <string name="btt_play">¡Jugar!</string>
    <string name="btt_profile">Perfil</string>
    <string name="btt_settings">Ajustes</string>
    <string name="btt_exit">Salir</string>

    <!-- Strings de la actividad: Menú ajustes -->
    <string name="txtView_settings">Ajustes</string>
    <string name="sw_music">Música</string>
    <string name="sw_sfx">Efectos</string>
    <string name="btt_settBack">Atrás</string>

    <!-- Strings de la actividad: Juego -->
    <string name="txtView_gm_desc">
        Cositas
    </string>
    <string name="btt_start">Empezar</string>
    <!-- STRINGS ESPECÍFICOS DE LA ACTIVIDAD: PARTIDA -->
    <string name="questions_number">0 / 10</string>
    <string name="points">0</string>
    <!-- Pregunta 1 -->
    <string name="q1">
        ¿Cuál fue el primer videojuego de la famosa saga de videojuegos "FIFA"?
    </string>
    <string name="q1a1">
        FIFA 98
    </string>
    <string name="q1a2">
        FIFA INTERNATIONAL SOCCER (FIFA 94)
    </string>
    <string name="q1a3">
        FIFA 95
    </string>
    <string name="q1a4">
        FIFA 2000
    </string>
    <!-- Pregunta 2 -->
    <string name="q2">
        ¿Cuál es la videoconsola con el mayor número de ventas?
    </string>
    <string name="q2a1">
        Nintendo DS
    </string>
    <string name="q2a2">
        PlayStation 1
    </string>
    <string name="q2a3">
        PlayStation 2
    </string>
    <string name="q2a4">
        Nintendo Wii
    </string>
    <!-- Pregunta 3 -->
    <string name="q3">
        ¿Cuál es el mapa más grande (en kilometros cuadrados) de la historia de los videojuegos?
    </string>
    <string name="q3a1">
        Minecraft
    </string>
    <string name="q3a2">
        Fuel
    </string>
    <string name="q3a3">
        The Elder Scrolls 2: Daggerfall
    </string>
    <string name="q3a4">
        No Mans Sky
    </string>
    <!-- Pregunta 4 -->
    <string name="q4">
        ¿A qué empresa pertenece la saga de videojuegos Metal Gear Solid?
    </string>
    <string name="q4a1">
        Bandai Namco
    </string>
    <string name="q4a2">
        Konami
    </string>
    <string name="q4a3">
        Capcom
    </string>
    <string name="q4a4">
        Square Enix
    </string>
    <!-- Pregunta 5 -->
    <string name="q5">
        ¿Cual de estos videojuegos se planteó originalmente como un videojuego infantil,
        pero acabó convertido en un juego de carácter irreverente para el público adulto?
    </string>
    <string name="q5a1">
        Conkers Bad Fur Day
    </string>
    <string name="q5a2">
        Leisure Suit Larry in the Land of the Lounge Lizards
    </string>
    <string name="q5a3">
        Bully
    </string>
    <string name="q5a4">
        Grand Theft Auto
    </string>
    <!-- Pregunta 6 -->
    <string name="q6">
        ¿Quién fue el creador de la GameBoy?
    </string>
    <string name="q6a1">
        Shigeru Miyamoto
    </string>
    <string name="q6a2">
        Hiroshi Yamauchi
    </string>
    <string name="q6a3">
        Satoru Iwata
    </string>
    <string name="q6a4">
        Gunpei Yokoi
    </string>
    <!-- Pregunta 7 -->
    <string name="q7">
        ¿Cuál de estos videojuegos está protagonizado por una mujer?
    </string>
    <string name="q7a1">
        The Legend of Zelda
    </string>
    <string name="q7a2">
        Metroid
    </string>
    <string name="q7a3">
        The Last of Us
    </string>
    <string name="q7a4">
        Heavy Rain
    </string>

    <string name="q_true">Verdadero</string>
    <string name="q_false">Falso</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="endGame">Fin de la partida</string>
    <string name="puntuation">Puntuación</string>
    <string name="desc_bttPlayAgain">Botón para empezar de nuevo una partida</string>
    <string name="desc_bttHome">Botón para volver al menú principal</string>
    <string name="correctAnswers">Respuestas correctas</string>
    <string name="incorrectAnswers">Respuestas incorrectas</string>
    <string name="q1_TF">¿Es Grand Theft Auto V el juego más vendido de la historia?</string>
    <string name="answer">Responder</string>
    <string name="q2_VF">La inteligencia artificial que ayuda a Master Chief en Halo se llama Alexa</string>
    <string name="q3_VF">El primer Metal Gear salió en el año 1987</string>
    <string name="q1_mc">¿Cuales de estos juegos pertenecen a la empresa de videojuegos Level-5?</string>
    <string name="q1a1_mc">Inazuma Eleven</string>
    <string name="q1a2_mc">Phoenix Wright: Ace Attorney</string>
    <string name="q1a3_mc">Octopath Traveller</string>
    <string name="q1a4_mc">Ni No Kuni</string>
    <string name="q1a5_mc">Profesor Layton</string>
    <string name="q1a6_mc">Danganronpa: Trigger Happy Havoc</string>
    <string name="q2_mc">¿Cuales de estos juegos son considerados spin-offs de la saga Mario?</string>
    <string name="q2a1_mc">Super Mario 64</string>
    <string name="q2a2_mc">New Super Mario Bros U</string>
    <string name="q2a3_mc">Paper Mario</string>
    <string name="q2a4_mc"><![CDATA[Mario & Luigi: Superstar Saga]]></string>
    <string name="q2a5_mc">Super Mario World</string>
    <string name="q2a6_mc">Super Mario Bros: The Lost Levels</string>
    <string name="q3_mc">¿Cuales de estos seres enemigos en la saga Metroid?</string>
    <string name="q3a1_mc">Metroides</string>
    <string name="q3a2_mc">Zoomers</string>
    <string name="q3a3_mc">Sanghelis</string>
    <string name="q3a4_mc">Wendigos</string>
    <string name="q3a5_mc">Creepers</string>
    <string name="q3a6_mc">Zebesianos</string>
    <string name="credits">by Mr. Wojacks</string>
</resources>