<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout12"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ui_questions_mc"
    tools:context=".fragments.questions.Questions3MCFragment" >

    <TextView
        android:id="@+id/txtView_q3_mc"
        android:layout_width="301dp"
        android:layout_height="164dp"
        android:layout_marginTop="164dp"
        android:fontFamily="sans-serif"
        android:text="@string/q3_mc"
        android:textAlignment="center"
        android:textColor="#6A1B9A"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtView_questions3_mc"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/questions_number"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtView_points3_mc"
        android:layout_width="119dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/points"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="307dp"
        android:layout_height="380dp"
        android:layout_marginTop="68dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_q3_mc" >

        <CheckBox
            android:id="@+id/ckbx_q3a1"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:fontFamily="@font/asdonuts_font_family"
            android:text="@string/q3a1_mc"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/ckbx_q3a2"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:fontFamily="@font/asdonuts_font_family"
            android:text="@string/q3a2_mc"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/ckbx_q3a3"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:fontFamily="@font/asdonuts_font_family"
            android:text="@string/q3a3_mc"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/ckbx_q3a4"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:fontFamily="@font/asdonuts_font_family"
            android:text="@string/q3a4_mc"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/ckbx_q3a5"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:fontFamily="@font/asdonuts_font_family"
            android:text="@string/q3a5_mc"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/ckbx_q3a6"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:fontFamily="@font/asdonuts_font_family"
            android:text="@string/q3a6_mc"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btt_answer_q3_mc"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/answer"
            android:textSize="24sp"
            app:icon="@android:drawable/ic_menu_set_as" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>