<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ui_questions"
    tools:context=".fragments.Question5Fragment" >

    <TextView
        android:id="@+id/txtView_q5"
        android:layout_width="301dp"
        android:layout_height="164dp"
        android:layout_marginTop="164dp"
        android:fontFamily="sans-serif"
        android:text="@string/q5"
        android:textAlignment="center"
        android:textColor="#6A1B9A"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtView_questions5"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/questions_number"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtView_points5"
        android:layout_width="119dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/points"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="303dp"
        android:layout_marginTop="72dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_q5">

        <Button
            android:id="@+id/btt_q5a1"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/q5a1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btt_q5a2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/q5a2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btt_q5a3"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/q5a3"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btt_q5a4"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/q5a4"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>