<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ui_questions_2b"
    tools:context=".fragments.questions.Question3VFFragment" >

    <TextView
        android:id="@+id/txtView_questions3_vf"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/questions_number"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtView_points3_vf"
        android:layout_width="119dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/points"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtView_q3_vf"
        android:layout_width="306dp"
        android:layout_height="172dp"
        android:layout_marginTop="156dp"
        android:text="@string/q3_VF"
        android:textAlignment="center"
        android:textColor="#6A1B9A"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="314dp"
        android:layout_height="127dp"
        android:layout_marginTop="63dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_q3_vf" >

        <ToggleButton
            android:id="@+id/togBtt_q3_vf"
            style="@style/Theme.QuizGame"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/darkPurple2"
            android:checked="true"
            android:text="ToggleButton"
            android:textColor="#FFFFFF"
            android:textOff="@string/q_false"
            android:textOn="@string/q_true"
            android:textSize="34sp" />

        <Button
            android:id="@+id/btt_q3_vf"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/answer"
            android:textSize="24sp"
            app:icon="@android:drawable/ic_menu_set_as" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>