<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ui_questions_2b"
    tools:context=".fragments.questions.Question1VFFragment">

    <TextView
        android:id="@+id/txtView_q1_TF"
        android:layout_width="306dp"
        android:layout_height="172dp"
        android:layout_marginTop="156dp"
        android:text="@string/q1_TF"
        android:textAlignment="center"
        android:textColor="#6A1B9A"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="314dp"
        android:layout_height="127dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_q1_TF">

        <ToggleButton
            android:id="@+id/togBtt"
            style="@style/Theme.QuizGame"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/darkPurple2"
            android:checked="true"
            android:text="ToggleButton"
            android:textColor="#FFFFFF"
            android:textOff="@string/q_false"
            android:textOn="@string/q_true"
            android:textSize="34sp" />

        <Button
            android:id="@+id/btt_q2a"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/answer"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>